Fixed page bugs: cut cap, jump between header and about on mobile and experience bug animation if hover work before finish anim

--- a/src/About/About.module.css
+++ b/src/About/About.module.css
@@ -124,11 +124,11 @@ img:hover {
 
   .about {
     margin-left: 5rem;
-    margin-right: 5rem;
+    margin-right: 5rem; 
   }
+
   .about_image {
     margin: auto auto;
-    padding-top: 0;
     padding-bottom: 2rem;
   }
 
